# dyn_buf_reader

./: .gitignore  AGENTS.md  ALTERNATIVE-LICENSE.md  CHANGELOG.md  CLA.md  CONTRIBUTING.md  COVENANT.md  Cargo.toml  GRANTS.md  LICENSE-EXCEPTION.md  README.md  rust-toolchain.toml
.github/: pull_request_template.md
.github/workflows/: checks.yml  rust.yml
src/: buffer.rs  constants.rs  lib.rs  read.rs  reader.rs  temp.rs
src/buffer/: tests.rs
src/constants/: tests.rs
src/reader/: buffer.rs  tests.rs
