[package]
name = "dyn_buf_reader"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later OR Apache-2.0 OR MIT"
repository = "https://github.com/viell-dev/dyn_buf_reader"
rust-version = "1.87.0"

[lints.rust]
future_incompatible = { level = "warn", priority = -1 }
nonstandard_style = { level = "warn", priority = -1 }
rust_2018_idioms = { level = "warn", priority = -1 }
unused = { level = "warn", priority = -1 }

unexpected_cfgs = "warn"
unsafe_code = "deny"

[lints.clippy]
all = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

missing_errors_doc = "allow"
missing_panics_doc = "allow"
missing_safety_doc = "allow"
must_use_candidate = "allow"
manual_div_ceil = "allow"

allow_attributes = "warn"
allow_attributes_without_reason = "warn"
arithmetic_side_effects = "warn"
as_conversions = "warn"
cfg_not_test = "warn"
expect_used = "warn"
indexing_slicing = "warn"
module_name_repetitions = "warn"
print_stderr = "warn"
print_stdout = "warn"
todo = "warn"
unimplemented = "warn"
unwrap_used = "warn"
